unpackaged/main/default/objects/Employee__c/fields/Employee_City__c.field-meta.xml
<CustomField>
    <fullName>Employee_City__c</fullName>
    <label>Employee City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>