unpackaged/main/default/objects/Employee__c/fields/Employee_country__c.field-meta.xml
<CustomField>
    <fullName>Employee_country__c</fullName>
    <label>Employee country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>