unpackaged/main/default/objects/Employee__c/fields/skills__c.field-meta.xml
<CustomField>
    <fullName>skills__c</fullName>
    <label>skills</label>
    <type>TextArea</type>
</CustomField>