unpackaged/main/default/objects/Employee__c/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <label>Technologies</label>
    <type>TextArea</type>
</CustomField>